# Financial-Statement-Analysis-System

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
infra/: prometheus.yml
infra/k8s/: deployment.yaml  ingress.yaml  service.yaml
infra/terraform/: main.tf  outputs.tf  variables.tf
src/: __init__.py  config.py  main.py
src/agent/: __init__.py  graph.py  nodes.py  tools.py
src/api/: __init__.py  app.py  schemas.py
src/document_processor/: __init__.py  chunker.py  normalizer.py  parser.py
src/ml/: __init__.py  anomaly_detector.py  categorizer.py  forecasting.py
src/monitoring/: __init__.py  langsmith_eval.py  metrics.py
src/rag/: __init__.py  chain.py  embeddings.py  retriever.py  vectorstore.py
tests/: __init__.py  conftest.py  test_agents.py  test_parser.py  test_rag.py
