# pyproject.toml
[project]
name = "financial-statement-analyzer"
version = "1.0.0"
description = "ML-powered financial statement analysis with RAG + LangGraph"
requires-python = ">=3.11"
dependencies = [
    # Core LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "langsmith>=0.2.0",

    # Vector stores
    "chromadb>=0.5.0",
    "azure-search-documents>=11.4.0",

    # Document processing
    "pymupdf>=1.24.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "camelot-py[cv]>=0.11.0",
    "tabula-py>=2.9.0",

    # ML & Analytics
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Azure Cloud
    "azure-identity>=1.17.0",
    "azure-storage-blob>=12.20.0",
    "azure-cosmos>=4.7.0",
    "azure-monitor-opentelemetry-exporter>=1.0.0",

    # Monitoring & Observability
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "tenacity>=8.4.0",
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]